crates/atlas-runtime/tests/snapshots/assignment_target_modern__assignment_array_literal_value.snap
---
source: crates/atlas-runtime/tests/assignment_target_modern.rs
expression: "program.items[0]"
---
Statement:
  Assign:
    target:
      Name:
        name: items
        span:
          start: 0
          end: 5
    value:
      ArrayLiteral:
        elements:
          - Literal:
              - Number: 1
              - start: 9
                end: 10
          - Literal:
              - Number: 2
              - start: 12
                end: 13
          - Literal:
              - Number: 3
              - start: 15
                end: 16
        span:
          start: 8
          end: 17
    span:
      start: 0
      end: 18
