crates/atlas-runtime/tests/snapshots/assignment_target_modern__assignment_boolean_value.snap
---
source: crates/atlas-runtime/tests/assignment_target_modern.rs
expression: "program.items[0]"
---
Statement:
  Assign:
    target:
      Name:
        name: flag
        span:
          start: 0
          end: 4
    value:
      Literal:
        - Bool: true
        - start: 7
          end: 11
    span:
      start: 0
      end: 12
