crates/atlas-runtime/tests/snapshots/assignment_target_modern__assignment_simple_name.snap
---
source: crates/atlas-runtime/tests/assignment_target_modern.rs
expression: "program.items[0]"
---
Statement:
  Assign:
    target:
      Name:
        name: x
        span:
          start: 0
          end: 1
    value:
      Literal:
        - Number: 42
        - start: 4
          end: 6
    span:
      start: 0
      end: 7
