crates/atlas-runtime/tests/snapshots/assignment_target_modern__assignment_string_value.snap
---
source: crates/atlas-runtime/tests/assignment_target_modern.rs
expression: "program.items[0]"
---
Statement:
  Assign:
    target:
      Name:
        name: name
        span:
          start: 0
          end: 4
    value:
      Literal:
        - String: Alice
        - start: 7
          end: 14
    span:
      start: 0
      end: 15
